# first_app

./: .gitignore  README.rst  config.yml  docker-compose.yaml  main.py  pyproject.toml
app/: __init__.py  lists.py  routes.py  tasks.py  users.py
app/auth/: dao.py  routes.py  schemas.py  services.py
app/boards/: dao.py  depends.py  routes.py  schemas.py  services.py
app/dao/: boards.py
app/lists/: dao.py  depends.py  routes.py  schemas.py  services.py
app/schemas/: boards.py
app/services/: boards.py
app/tasks/: dao.py  depends.py  routes.py  schemas.py  services.py
app/users/: dao.py  depends.py  routes.py  schemas.py  services.py
core/: db_utils.py
core/auth_utils/: auth.py  enum.py
core/config/: schema.py  settings.py
core/pagination/: schemas.py
core/user_util/: auth.py  jwt_utils.py  login.py  refresh.py  settings.py  signup.py
core/utils/: number.py
db/: db.py
db/models/: __init__.py  boards.py  lists.py  tasks.py  users.py
migrations/: env.py
migrations/versions/: 5656a08c93bd_delete_uniqueconstraint.py  5d8bd3ea97ae_add_tables.py  5e5c6098b2b3_first.py  610c58cfbbc8_first.py  7ebbf5d8b55b_change_orderings_type.py  8761871f8bd6_second.py  9da8e34c97a7_delete_column_is_activated_in_users_.py  c7800652f25d_first.py  ddcc428b73e2_renaming_password_to_hashed_password.py  e5fc1d70a028_add_is_deleted_and_is_activated_column_.py  ebc18e63f69b_add_column_description_for_lists.py  ecb3cc821d80_init_base_tables.py  f2e3e4594f37_second.py
tests/: speed_test.py  test_first_app.py
tests/db_data/: alembic_version.csv  boards.csv  lists.csv  tasks.csv  users.csv
