[tool.poetry]
name = "first_app"
version = "0.1.0"
description = ""
authors = ["grimoruu <grimoruu@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
SQLAlchemy = "^1.4.44"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.5"
username = "^2.1.0"
ruff = "^0.0.155"
ndicts = "^0.1.0"
pyjwt = "^2.6.0"
argon2 = "^0.1.10"
pydantic = {extras = ["email"], version = "^1.10.2"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
sqlalchemy = {extras = ["mypy"], version = "^1.4.46"}
strenum = "^0.4.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["F", "E", "I", "U", "N", "C", "B", "A", "T", "Q", "ANN", "RUF"]
ignore = ["A003", "ANN101", "Q000", "E902", "B008", "B904"]

exclude = ["tests", ".venv", ".db"]

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"

[[tool.mypy.overrides]]
module = ["ndicts.*"]
ignore_missing_imports = true
