[tool.poetry]
name = "first_app"
version = "0.1.0"
description = ""
authors = ["grimoruu <grimoruu@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.5"
username = "^2.1.0"
ruff = "^0.0.247"
ndicts = "^0.3.0"
pyjwt = "^2.6.0"
argon2 = "^0.1.10"
pydantic = {extras = ["email"], version = "^1.10.2"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
black = "^23.1.0"
sqlalchemy = {version = "1.4.46", extras = ["mypy"]}
mypy = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["F", "E", "I", "U", "N", "C", "B", "A", "T", "Q", "ANN", "RUF"]
ignore = ["A003", "ANN101", "ANN401", "Q000", "E902", "B008", "B904"]

exclude = ["tests", ".venv", ".db", "venv", "experiment folder", "migrations"]

[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"

exclude = ["tests", ".venv", ".db", "venv", "migrations", "experiment folder"]

[[tool.mypy.overrides]]
module = ["ndicts.*"]
ignore_missing_imports = true

[tool.black]
line-length = 120